# hypertext

./: CHANGELOG.md  deny.toml
crates/hypertext/: Cargo.toml
crates/hypertext-macros/: Cargo.toml
crates/hypertext-macros/src/: css.rs  js.rs  lib.rs
crates/hypertext-macros/src/html/: basics.rs  component.rs  mod.rs
crates/hypertext-macros/src/html/syntaxes/: maud.rs  rsx.rs
crates/hypertext/src/: prelude.rs
crates/hypertext/src/macros/: mod.rs
crates/hypertext/src/validation/: attributes.rs
crates/hypertext/tests/: alloc.rs  datastar-js.rs  lightningcss.rs  macros.rs
crates/hypertext/tests/datastar-js-fail/: invalid_expression.rs  invalid_expression.stderr  invalid_show.rs  invalid_show.stderr
crates/hypertext/tests/lightningcss-fail/: missing_colon.rs  missing_colon.stderr
